trunk/Archive/312a004470dc3be89cb84749414f4a45-e0ddba348d612dc7cf611558d8362447/output
main.cpp:16:1: error: static assertion failed: X
 static_assert(is_complete<X>::value, "X");
 ^
